<?xml version="1.0" encoding="utf-8"?>
<menu xmlns:android="http://schemas.android.com/apk/res/android">

    <group android:checkableBehavior="single">
        <item
            android:id="@+id/nav_explore"
            android:icon="@drawable/ic_explore"
            android:title="@string/string_explore"
            android:checked="true"/>
        <item
            android:id="@+id/nav_favorites"
            android:icon="@drawable/ic_heart"
            android:title="@string/string_favorites"/>
        <item
            android:id="@+id/nav_history"
            android:icon="@drawable/ic_download"
            android:title="@string/string_history"/>
    </group>

    <!--<item android:title="@string/string_user_settings">-->
        <!--<menu>-->
            <!--<item-->
                <!--android:id="@+id/nav_share"-->
                <!--android:icon="@drawable/ic_menu_share"-->
                <!--android:title="@string/string_settings"/>-->
        <!--</menu>-->
    <!--</item>-->

</menu>
