<?xml version="1.0" encoding="utf-8"?>
<LinearLayout
    android:id="@+id/no_fav_layout"
    xmlns:android="http://schemas.android.com/apk/res/android"
    android:layout_width="wrap_content"
    android:layout_height="wrap_content"
    android:layout_centerInParent="true"
    android:gravity="center_horizontal"
    android:orientation="vertical"
    android:visibility="gone">

    <ImageView
        android:layout_width="100dp"
        android:layout_height="100dp"
        android:layout_marginBottom="20dp"
        android:contentDescription="@null"
        android:src="@drawable/ic_no_favorite"/>

    <TextView
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:layout_marginBottom="5dp"
        android:text="@string/string_no_favorite_yet"
        android:textColor="@color/color_white"
        android:textSize="20sp"/>

    <LinearLayout
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:orientation="horizontal">

        <TextView
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:layout_marginEnd="10dp"
            android:layout_marginRight="10dp"
            android:text="@string/string_find_your_photos"
            android:textColor="@color/color_white"
            android:textSize="18sp"/>

        <LinearLayout
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:background="@drawable/fav_off_button_background_white"
            android:clickable="false"
            android:orientation="horizontal">

            <ImageView
                android:layout_width="10dp"
                android:layout_height="10dp"
                android:layout_marginBottom="5dp"
                android:layout_marginEnd="5dp"
                android:layout_marginLeft="10dp"
                android:layout_marginRight="5dp"
                android:layout_marginStart="10dp"
                android:layout_marginTop="5dp"
                android:contentDescription="@null"
                android:duplicateParentState="true"
                android:src="@drawable/ic_heart_off"
                android:tint="@color/color_white"/>

            <TextView
                android:layout_width="wrap_content"
                android:layout_height="wrap_content"
                android:layout_gravity="center_vertical"
                android:layout_marginEnd="10dp"
                android:layout_marginRight="10dp"
                android:duplicateParentState="true"
                android:text="@string/string_favorite"
                android:textColor="@color/color_white"/>
        </LinearLayout>
    </LinearLayout>
</LinearLayout>